--- a/prep/resilience/ecological/ecosystem/v2020/eco_species_diversity.Rmd
+++ b/prep/resilience/ecological/ecosystem/v2020/eco_species_diversity.Rmd
@@ -60,6 +60,7 @@ write_csv(eco_spp, file.path(dir_res, "output/eco_spp_diversity.csv"))
 ## Save to Toolbox 
 
 ```{r save-to-toolbox, eval=F}
+eco_spp <- read_csv(file.path(dir_res, "output/eco_spp_diversity.csv"))
 write_csv(eco_spp, file.path(dir_scores, "layers/eco_spp_diversity.csv"))
 ```
 
