--- a/prep/resilience/ecological/fishing_pressure/v2020/fp_regulations.Rmd
+++ b/prep/resilience/ecological/fishing_pressure/v2020/fp_regulations.Rmd
@@ -53,9 +53,16 @@ offshore <- read_csv(file.path(dir_lsp, "output/offshore_status.csv")) %>%
 # Use the offshore score for fishing pressure (only need years 2014-2020)
 fp_mpa <- offshore %>% 
   filter(year >= 2014) %>% 
-  dplyr::select(region_id, year, score = status)
+  dplyr::select(region_id, year, resilience_score = status)
 
 # Save files to output folder
 write_csv(fp_mpa, file.path(dir_res, "output/fp_reg.csv"))
+```
+
+## Save to Toolbox
+
+```{r save-to-toolbox, eval=F}
+fp_reg <- read_csv(file.path(dir_res, "output/fp_reg.csv"))
+write_csv(fp_reg, file.path(dir_scores, "layers/res_fp_reg.csv"))
 ```
 
