--- a/prep/resilience/ecological/invasive_species/v2020/sp_management.Rmd
+++ b/prep/resilience/ecological/invasive_species/v2020/sp_management.Rmd
@@ -77,6 +77,7 @@ write_csv(sp_mgmt, file.path(dir_res, "output/sp_mgmt.csv"))
 ## Save to Toolbox
 
 ```{r save-to-toolbox, eval=F}
-write_csv(sp_mgmt, file.path(dir_scores, "layers/sp_mgmt.csv"))
+sp_mgmt <- read_csv(file.path(dir_res, "output/sp_mgmt.csv"))
+write_csv(sp_mgmt, file.path(dir_scores, "layers/res_sp_mgmt.csv"))
 ```
 
